[tool.poetry]
name = "gerrydb"
version = "0.2.0"
description = "Client library for GerryDB."
authors = ["Parker J. Rule <parker.rule@tufts.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
tomlkit = "^0.13.0"
msgpack = "^1.1.0"
httpx = "^0.28.1"
pydantic = "^1.10.4"
orjson = "^3.10.0"
shapely = "^2.0.1"
python-dateutil = "^2.8.2"
geopandas = "^1.0.1"
networkx = "^3.4.2"
fastapi = "^0.115.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^24.8.0"
pytest-vcr = "^1.0.2"
pytest-cov = "^6.1.0"
pytest-asyncio = "^0.26.0"
pytest-httpx = "^0.35.0"
fiona = ">=1.9,<1.10"
geopandas = "0.14.4"

[tool.pytest.ini_options]
markers = [
    "vcr: mark a test as a vcr test",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
