[tool.poetry]
name = "gerrydb"
version = "0.2.0"
description = "Client library for GerryDB."
authors = ["MGGG <code@mggg.org>"]  

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = "^0.13.3"
msgpack = "^1.1.1"
httpx = "^0.28.1"
pydantic = "^2.11.7"
orjson = "^3.10.0"
shapely = "^2.0.1"
python-dateutil = "^2.9.0"
geopandas = "^1.1.1"
networkx = "^3.4.2"
fastapi = "^0.115.14"
gerrychain = "^0.3.2"
colorlog = "^6.9.0"
GeoAlchemy2 = "^0.17.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
isort = "^6.0.1"
pytest-vcr = "^1.0.2"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"
pytest-httpx = "^0.35.0"
fiona = "^1.10.1"
pyarrow = "^20.0.0"

[tool.pytest.ini_options]
markers = [
    "vcr: mark a test as a vcr test",
    "slow: mark a test as slow",
]

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
